Complete rebrand from No Code Claude to Pawgrammer
- Update page title, meta description, and PWA manifest
- Replace all "No Code Claude" references with "Pawgrammer"
- Add footer logo for consistent branding
- Update share functionality title

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pawgrammer",
+  "name": "Pawgrammer - AI-powered coding tools",
   "icons": [
     {
       "src": "favicon.ico",
