--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,20 @@
       "dest": "/static/$1"
     },
     {
+      "src": "/sitemap.xml",
+      "dest": "/sitemap.xml",
+      "headers": {
+        "Content-Type": "application/xml"
+      }
+    },
+    {
+      "src": "/robots.txt",
+      "dest": "/robots.txt",
+      "headers": {
+        "Content-Type": "text/plain"
+      }
+    },
+    {
       "src": "/(.*\\.(png|jpg|jpeg|gif|mp4|webm|svg|ico|pdf))",
       "dest": "/$1",
       "headers": {
