--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "busboy": "^1.6.0",
+    "form-data": "^4.0.4",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
