--- a/vercel.json
+++ b/vercel.json
@@ -29,6 +29,10 @@
       }
     },
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
